--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,9 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["babel-plugin-react-require", "transform-decorators-legacy"],
-  "env": {
-      "development": {
-          "plugins": [
-            "transform-decorators-legacy",
-            "transform-runtime",
-            ["react-transform", {
-              "transforms": [{
-                "transform" : "react-transform-hmr",
-                "imports"   : ["react"],
-                "locals"    : ["module"]
-          }]
-        }]
-      ]
+    "presets": ["es2015", "stage-0"],
+    "plugins": ["transform-decorators-legacy"],
+    "env": {
+        "development": {
+            "plugins": ["transform-decorators-legacy", "transform-runtime"]
+        }
     }
-  }
 }
