--- a/package.json
+++ b/package.json
@@ -19,36 +19,35 @@
     "append-query": "^2.0.1",
     "es6-promise": "^4.0.5",
     "isomorphic-fetch": "^2.2.1",
-    "lodash-decorators": "^4.3.4",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.1",
-    "recompose": "^0.23.4",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.1.0"
+    "postprocessing": "^2.3.1",
+    "three": "^0.87.1",
+    "three-collada-loader": "0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
-    "babel-plugin-react-require": "^3.0.0",
-    "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-nibble": "^3.1.2",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "js-beautify": "1.6.12",
     "postcss": "^6.0.1",
     "postcss-loader": "^2.0.5",
     "postcss-modules-extract-imports": "1.0.1",
@@ -56,8 +55,7 @@
     "postcss-modules-scope": "1.0.2",
     "postcss-modules-values": "1.2.2",
     "postcss-nested": "^2.0.2",
-    "react-hot-loader": "3.0.0-beta.5",
-    "react-transform-hmr": "1.0.4",
+    "shader-loader": "^1.3.1",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
